--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_spinkit: ^5.2.0
   flutter_appauth: ^6.0.2
   crypto: ^3.0.3
+  animated_bottom_navigation_bar: ^1.2.0
+  dot_navigation_bar: ^1.0.2
 flutter_native_splash:
   color: "#FE724C"
   image: assets/images/splash.png
