--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.2.0
   dot_navigation_bar: ^1.0.2
   uuid: ^3.0.7
+  equatable: ^2.0.5
 flutter_native_splash:
   color: "#FE724C"
   image: assets/images/splash.png
