--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   dot_navigation_bar: ^1.0.2
   uuid: ^3.0.7
   equatable: ^2.0.5
+  country_picker: ^2.0.21
 flutter_native_splash:
   color: "#FE724C"
   image: assets/images/splash.png
