--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   uuid: ^3.0.7
   equatable: ^2.0.5
   country_picker: ^2.0.21
+  persistent_bottom_nav_bar: ^5.0.2
 flutter_native_splash:
   color: "#FE724C"
   image: assets/images/splash.png
