--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   equatable: ^2.0.5
   country_picker: ^2.0.21
   persistent_bottom_nav_bar: ^5.0.2
+  bottom_navy_bar: ^6.0.0
 flutter_native_splash:
   color: "#FE724C"
   image: assets/images/splash.png
